--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Hello World </title>
+	<title> A Chronicle of a Gap Year </title>
+	<h1> Gap Yah </h1>
 </head>
 <body>
 
